fixed x overflow and display issue

--- a/client/src/SCSS/components/MyProfile/ProfileParks/parks.scss
+++ b/client/src/SCSS/components/MyProfile/ProfileParks/parks.scss
@@ -9,6 +9,7 @@
 
     .favoritesContainer{
 
+        position:relative;
         background-color: aquamarine;
         width:100%;
         height: 30vh;
