--- a/client/src/index.css
+++ b/client/src/index.css
@@ -344,6 +344,7 @@
   overflow-x: hidden;
 }
 .parksContainer .favoritesContainer {
+  position: relative;
   background-color: aquamarine;
   width: 100%;
   height: 30vh;
